# build_finish

./: .gitignore  Dockerfile  Dockerfile_migrations  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 787b5cacd670_initial_tables.py
build_finish/core/: app.py  lifespan.py  middelware.py  routes.py  settings.py  setup.py
build_finish/product/: schemes.py  views.py
build_finish/store/db/postgres_db/: accessor.py
build_finish/store/product/: accessor.py  exceptions.py  models.py
build_finish/store/product/base/: accessor.py  schemes.py
build_finish/store/product/brand/: accessor.py  exceptions.py  schemes.py  views.py
build_finish/store/product/category/: accessor.py  exceptions.py  schemes.py  views.py
build_finish/store/product/product/: accessor.py  exceptions.py  schemes.py  views.py
