[tool.poetry]
name = "build-finish"
version = "0.1.0"
description = "test task"
authors = ["Aleksey Sergievskiy <vivers83@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
fastapi = "^0.112.2"
loguru = "^0.7.2"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
